Change explore agent button

--- a/public/controllers/overview/components/overview-actions/agents-selector.less
+++ b/public/controllers/overview/components/overview-actions/agents-selector.less
@@ -36,3 +36,15 @@
 .euiBody-hasOverlayMask {
     overflow: auto!important;
 }
+
+.wz-explore-agent .euiButtonEmpty:focus{
+    background-color: transparent;
+}
+
+.wz-explore-agent .euiBadge__iconButton:hover {
+    transform: rotate(45deg);
+}
+
+.wz-explore-agent .euiBadge__iconButton {
+    transition: transform 0.25s;
+}
