Fixed infinite scroll on inventory fim

--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div ng-class="{'no-opacity': !moduleDiscoverReady}">
+            <div ng-class="{'no-display': !moduleDiscoverReady}">
                 <!-- Discover search bar section -->
                 <kbn-dis ng-show="octrl.tab && octrl.tab !== 'welcome'"></kbn-dis>
                 <!-- End Discover search bar section -->
