--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -273,6 +273,10 @@ html{
   margin-right: -8px !important;
 }
 
+.no-display {
+  display: none;
+}
+
 .wz-no-margin-padding {
   margin: 0 !important;
   padding: 0 !important;
