Fix responsiveness of agents-preview section

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1425,3 +1425,37 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
 .wz-menu-agent-info {
   background-color: rgb(245, 247, 250);
 }
+
+
+
+
+@media (min-width: 1600px) {
+  .agents-evolution-visualization{
+    width: 35vw;
+  }
+}
+
+@media (max-width: 1599px) {
+  .agents-evolution-visualization{
+    width: 30vw;
+  }
+}
+
+
+@media (max-width: 1439px) {
+  .agents-evolution-visualization{
+    width: 25vw;
+  }
+}
+
+@media only screen and (max-width: 1200px){
+  .agents-evolution-visualization-group{
+    flex-wrap: wrap;
+  }
+  .agents-evolution-visualization{
+    width: 100%;
+  }
+  .agents-status-pie{
+    flex-grow: 1 !important;
+  }
+}
