Fix flick evolution vis

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1453,7 +1453,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
     flex-wrap: wrap;
   }
   .agents-evolution-visualization{
-    width: 100%;
+    width: 92vw;
   }
   .agents-status-pie{
     flex-grow: 1 !important;
