Changed `selected agent` background

--- a/public/controllers/overview/components/overview-actions/agents-selector.less
+++ b/public/controllers/overview/components/overview-actions/agents-selector.less
@@ -42,5 +42,11 @@
 }
 
 .wz-unpin-agent {
+    background-color: rgba(0, 107, 180, 0.1);
+    border-radius: 0;
     height: 40px;
+}
+
+.wz-unpin-agent:hover {
+    transform: translateY(0px)!important;
 }
