Fixed infinite scroll on inventory fim

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -264,6 +264,7 @@ html{
   opacity: 0 !important;
   width: 0 !important;
   height: 0px !important;
+  overflow: hidden;
 }
 
 .no-opacity-overview-monitoring {
