renamed Pin agent to Explore agent and agent selector modal responsive

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1426,8 +1426,15 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
   background-color: rgb(245, 247, 250);
 }
 
+.wz-select-agent-modal {
+  max-width: 60vw;
+}
 
-
+@media (max-width: 1300px) {
+  .wz-select-agent-modal {
+    max-width: 80vw;
+  }
+}
 
 @media (min-width: 1600px) {
   .agents-evolution-visualization{
