removed Selected API when there is only one and some fixes of App settings position

--- a/public/components/wz-menu/wz-menu.less
+++ b/public/components/wz-menu/wz-menu.less
@@ -42,7 +42,7 @@ wz-menu {
 
 .wz-menu-left-side{
     width: 200px;
-    background: #f5f7fa;
+    background: #fafbfd;
     padding: 16px;
     border-right: 1px solid #d3dae6;
 }
@@ -66,7 +66,8 @@ wz-menu {
 .wz-menu-sections {
     margin: -16px;
     padding: 16px 0;
-    background: #fafbfd;
+    position: relative;
+    min-height: 300px;
 }
 
 .wz-menu-selectors {
