--- a/public/less/dark_theme/wz_theme_dark.css
+++ b/public/less/dark_theme/wz_theme_dark.css
@@ -349,7 +349,7 @@ md-divider.md-default-theme, md-divider {
 }
 
 .wz-menu-sections {
-  background: #1a1b20!important;
+  /* background: #1a1b20!important; */
 }
 
 .wz-menu-selectors {
