Fix WzMenu and module title/tabs when Kibana nav is locked

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1466,3 +1466,11 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
     flex-grow: 1 !important;
   }
 }
+
+.chrHeaderWrapper--navIsLocked ~ .app-wrapper .wz-module-header-agent-wrapper {
+  padding-left: 240px;
+}
+
+.chrHeaderWrapper--navIsLocked ~ .app-wrapper .wz-module-header-nav-wrapper {
+  padding-left: 240px;
+}
