Added info message on the Agent evolution visualization when there are not results

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -202,6 +202,12 @@ html{
   padding-bottom: 10px;
 }
 
+
+.wz-padding-21 {
+  padding: 21px !important;
+}
+
+
 .wz-lateral-padding-16 {
   padding-left: 16px;
   padding-right: 16px;
