Fix management->Cluster breadcrumb error and empty callout

--- a/public/templates/management/monitoring/main-timelions.html
+++ b/public/templates/management/monitoring/main-timelions.html
@@ -3,7 +3,7 @@
     ng-show="resultState === 'none' && !loading && !showConfig && !showNodes">
     <div flex class="euiCallOut euiCallOut--warning">
         <div class="euiCallOutHeader">
-            <react-component name="EuiIcon" props="{type:'help',className:'euiCallOutHeader__title'}" />
+            <react-component name="EuiIcon" props="{type:'help',className:'euiCallOutHeader__title'}"> </react-component>
             <span class="euiCallOutHeader__title">There are no results for selected time range. Try another one.</span>
         </div>
     </div>
