--- a/public/templates/health-check/health-check.html
+++ b/public/templates/health-check/health-check.html
@@ -1,6 +1,6 @@
 <md-content flex="auto" layout="column" layout-align="center" class="health-check" ng-controller="healthCheck as ctrl">
     <span class="euiLoadingSpinner health-check-loader"></span>
-    <img aria-hidden="true" wz-src="/plugins/wazuh/img/icon_blue.svg" class="health-check-logo" />
+    <img aria-hidden="true" wz-src="/plugins/wazuh/img/icon_blue.svg" class="health-check-logo" ></img>
     <div class="margin-top-30">
         <dl class="euiDescriptionList euiDescriptionList--column euiDescriptionList--center euiDescriptionList--reverse"
             ng-repeat="result in ctrl.results track by $index">
