--- a/public/templates/management/groups/groups.html
+++ b/public/templates/management/groups/groups.html
@@ -11,7 +11,7 @@
                 <div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                     ng-show="gp.load">
                     <div class="euiFlexItem">
-                        <react-component name="EuiProgress" props="{size: 'xs', color: 'primary'}" />
+                        <react-component name="EuiProgress" props="{size: 'xs', color: 'primary'}" ></react-component>
                         <div class="euiSpacer euiSpacer--l"></div>
                     </div>
                 </div>
