--- a/public/templates/settings/settings-about.html
+++ b/public/templates/settings/settings-about.html
@@ -56,11 +56,11 @@
                 <div class="euiSpacer euiSpacer--l"></div>
                 <div layout="row" class="layout-align-center-center" flex>
                     <react-component name="EuiButtonIcon"
-                        props="{iconType:'logoSlack', iconSize:'xxl', href: 'https://wazuh.com/community/join-us-on-slack/', target: '_blank', 'aria-label': 'Wazuh Slack'}" />
+                        props="{iconType:'logoSlack', iconSize:'xxl', href: 'https://wazuh.com/community/join-us-on-slack/', target: '_blank', 'aria-label': 'Wazuh Slack'}" ></react-component>
                     <react-component class="wz-margin-left-16" name="EuiButtonIcon"
-                        props="{iconType:'logoGmail', iconSize:'xxl', href: 'https://groups.google.com/forum/#!forum/wazuh', target: '_blank', 'aria-label': 'Wazuh forum'}" />
+                        props="{iconType:'logoGmail', iconSize:'xxl', href: 'https://groups.google.com/forum/#!forum/wazuh', target: '_blank', 'aria-label': 'Wazuh forum'}" ></react-component>
                     <react-component class="wz-margin-left-16" name="EuiButtonIcon"
-                        props="{iconType:'logoGithub', iconSize:'xxl', href: 'https://github.com/wazuh/wazuh-kibana-app', target: '_blank', 'aria-label': 'Wazuh app Github'}" />
+                        props="{iconType:'logoGithub', iconSize:'xxl', href: 'https://github.com/wazuh/wazuh-kibana-app', target: '_blank', 'aria-label': 'Wazuh app Github'}" ></react-component>
 
                 </div>
             </div>
