--- a/public/templates/management/management-welcome.html
+++ b/public/templates/management/management-welcome.html
@@ -1,3 +1,3 @@
 <div ng-if="mctrl.tab === 'welcome'" style="padding-top: 16px;">
-    <react-component flex name="ManagementWelcomeWrapper" props="mctrl.welcomeCardsProps" />
+    <react-component flex name="ManagementWelcomeWrapper" props="mctrl.welcomeCardsProps" ></react-component>
 </div>
