--- a/public/templates/management/monitoring/main-timelions.html
+++ b/public/templates/management/monitoring/main-timelions.html
@@ -3,7 +3,7 @@
     ng-show="resultState === 'none' && !loading && !showConfig && !showNodes">
     <div flex class="euiCallOut euiCallOut--warning">
         <div class="euiCallOutHeader">
-            <react-component name="EuiIcon" props="{type:'help',className:'euiCallOutHeader__title'}" />
+            <react-component name="EuiIcon" props="{type:'help',className:'euiCallOutHeader__title'}" ></react-component>
             <span class="euiCallOutHeader__title">There are no results for selected time range. Try another one.</span>
         </div>
     </div>
@@ -13,6 +13,6 @@
 <!-- Monitoring Timelion visualizations section -->
 <div class="height-400" ng-class="{'no-opacity': resultState === 'none' || !rendered}"
     ng-show="!loading && !showConfig && !showNodes && rendered">
-    <react-component name="ClusterTimelions" props="{}" />
+    <react-component name="ClusterTimelions" props="{}" ></react-component>
 </div>
 <!-- End monitoring Timelion visualizations section -->
