--- a/public/templates/settings/settings-modules.html
+++ b/public/templates/settings/settings-modules.html
@@ -1,3 +1,3 @@
 <div ng-if="ctrl.tab === 'modules' && !ctrl.load">
-    <react-component name="EnableModules" props="{}"/>
+    <react-component name="EnableModules" props="{}"></react-component>
 </div>
