change columns width to improve responsive mode

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1474,3 +1474,13 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
 .chrHeaderWrapper--navIsLocked ~ .app-wrapper .wz-module-header-nav-wrapper {
   padding-left: 240px;
 }
+
+@media only screen and (max-width: 1645px) {
+  .hide-agent-status {
+    display: none;
+  }
+
+  .icon-box-action {
+    display: flex;
+  }
+}
