--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1423,7 +1423,13 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
 }
 
 .wz-menu-agent-info {
-  background-color: rgb(245, 247, 250);
+  background-color: #fafbfd;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  border-bottom: 1px solid #d3dae6;
+  height: 54px;
+  margin-top: 0px;
 }
 
 .wz-select-agent-modal {
