--- a/public/components/common/globalBreadcrumb/globalBreadcrumb.less
+++ b/public/components/common/globalBreadcrumb/globalBreadcrumb.less
@@ -2,6 +2,7 @@
     font-size: 14px;
     font-family: "Inter UI";
     padding: 5px 0px 0px 5px;
+    line-height: 1.2;
 }
 
 .wz-global-breadcrumb-btn{
