Migrating sample-data from management to app settings

--- a/public/templates/settings/settings.pug
+++ b/public/templates/settings/settings.pug
@@ -4,4 +4,5 @@ include ./settings-modules.html
 include ./settings-configuration.html
 include ./settings-logs.html
 include ./settings-about.html
+include ./settings-sample-data.html
 include ../footer.foot
