Fix style breadcrumb with agents for safari

--- a/public/components/common/globalBreadcrumb/globalBreadcrumb.less
+++ b/public/components/common/globalBreadcrumb/globalBreadcrumb.less
@@ -20,3 +20,9 @@
     padding-left: 16px;
     }
 }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) { 
+    _::-webkit-full-page-media, _:future, :root , .wz-global-breadcrumb {
+        line-height: 1.5;
+    }
+}
