--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1436,6 +1436,14 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
   max-width: 60vw;
 }
 
+.wz-markdown-wapper code {
+  color: #1c2226;
+  background-color: #e6e6e6;
+  border-radius: 3px;
+  font-family: courier, monospace;
+  padding: 0 3px;
+}
+
 @media (max-width: 1300px) {
   .wz-select-agent-modal {
     max-width: 80vw;
