--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1406,7 +1406,8 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
 }
 
 .globalFilterGroup__wrapper{
-  max-height: 40px;
+  max-height: 100px;
+  height: auto!important;
 }
 
 .agent-selection-table-loading::before{
