Adjust columns for discover tables

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1138,6 +1138,26 @@ wz-xml-file-editor {
   }
 }
 
+.flyout-no-overlap {
+  width: auto;
+}
+
+@media only screen and (max-width: 1000px){
+  .flyout-no-overlap {
+    max-width: 90%;
+  }
+}
+@media only screen and (min-width: 1000px) and (max-width: 1400px){
+  .flyout-no-overlap {
+    max-width: 85%;
+  }
+}
+@media only screen and (min-width: 1400px){
+  .flyout-no-overlap {
+    max-width: 60%;
+  }
+}
+
 .requirements-cards.euiFlexGroup--gutterLarge {
   margin: -10px !important;
 }
