Fixes in wzmenu styles

--- a/public/components/wz-menu/wz-menu.less
+++ b/public/components/wz-menu/wz-menu.less
@@ -43,7 +43,7 @@ wz-menu {
 .wz-menu-left-side{
     width: 200px;
     background: #f5f7fa;
-    padding: 16px;
+    padding: 0 16px;
     border-right: 1px solid #d3dae6;
 }
 
@@ -64,7 +64,7 @@ wz-menu {
 }
 
 .wz-menu-sections {
-    margin: -16px -16px 0px -16px;
+    margin: 0px -16px 0px -16px;
     padding: 16px 0;
     position: relative;
     min-height: 300px;
@@ -76,7 +76,6 @@ wz-menu {
     margin-right: -16px;
     padding: 16px;
     border-top: 1px solid #d3dae6;
-    margin-bottom: -16px;
 }
 
 .wz-menu-right-side{
