Fix breadcrumb for firefox

--- a/public/components/common/globalBreadcrumb/globalBreadcrumb.less
+++ b/public/components/common/globalBreadcrumb/globalBreadcrumb.less
@@ -26,3 +26,9 @@
         line-height: 1.5;
     }
 }
+
+@-moz-document url-prefix() {
+    .wz-global-breadcrumb #breadcrumbNoTitle {
+        height: auto!important;
+    }
+}
