--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -55,29 +55,25 @@
     float: right;
 }
 
-.euiAccordion {
+.application .euiAccordion {
     margin: 0px -16px;
     border-top: none;
     border-bottom: 1px solid #d3dae6;
 }
 
-.euiAccordion__triggerWrapper{
+.application .euiAccordion__triggerWrapper{
     padding: 0px 16px;
 }
 
-.euiAccordion__triggerWrapper .euiTitle {
+.application .euiAccordion__triggerWrapper .euiTitle {
     font-size: 16px;
 }
 
-/* .euiAccordion-isOpen .euiAccordion__childWrapper{
-    height: unset!important;
-} */
-
-.euiAccordion__childWrapper .flyout-row:not(.related-rules-row) .euiToolTipAnchor{
+.application .euiAccordion__childWrapper .flyout-row:not(.related-rules-row) .euiToolTipAnchor{
     //display: block!important;
 }
 
-.euiAccordion__button {
+.application .euiAccordion__button {
     padding: 0px 0px 8px 0;
 }
 
