--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -16,15 +16,11 @@
 
 html{
   font-size: 14.5px!important;
-  font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI"!important;
+  font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"!important;
 }
 
 .h-100{
   height: 100%;
-}
-
-#kibana-body{
-  min-height: calc(~'100vh - 1px') !important;
 }
 
 /* Margins */
