Add some styles fixes

--- a/public/components/common/modules/discover/discover.less
+++ b/public/components/common/modules/discover/discover.less
@@ -34,7 +34,8 @@ div.euiPanel.euiComboBoxOptionsList.euiComboBoxOptionsList {
     width: 78%!important;
 }
 
-.wz-discover.hide-filter-controll .globalFilterGroup__branch {
+.wz-discover.hide-filter-controll .globalFilterGroup__branch, 
+wz-top-nav .globalFilterGroup__branch {
     display: none;
 }
 
