--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -55,25 +55,21 @@
     float: right;
 }
 
-.application .euiAccordion {
+.application .euiAccordion, .flyout-body .euiAccordion{
     margin: 0px -16px;
     border-top: none;
     border-bottom: 1px solid #d3dae6;
 }
 
-.application .euiAccordion__triggerWrapper{
+.application .euiAccordion__triggerWrapper, .flyout-body .euiAccordion__triggerWrapper{
     padding: 0px 16px;
 }
 
-.application .euiAccordion__triggerWrapper .euiTitle {
+.application .euiAccordion__triggerWrapper .euiTitle, .flyout-body .euiAccordion__triggerWrapper .euiTitle{
     font-size: 16px;
 }
 
-.application .euiAccordion__childWrapper .flyout-row:not(.related-rules-row) .euiToolTipAnchor{
-    //display: block!important;
-}
-
-.application .euiAccordion__button {
+.application .euiAccordion__button, .flyout-body .euiAccordion__button {
     padding: 0px 0px 8px 0;
 }
 
