--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -424,19 +424,18 @@ md-dialog.modalTheme .md-button {
   width: 0 !important;
 }
 
-.kbnGlobalNav.kbnGlobalNav-isOpen + .app-wrapper .fullscreen {
-  width: calc(~'100vw - 250px') !important;
-  left: 180px !important;
+.chrHeaderWrapper--navIsLocked ~ .app-wrapper .fullscreen {
+  width: calc(~'100vw - 400px')!important;
+  left: 321px!important;
 }
 
 .fullscreen {
   z-index: 1000;
   height: calc(~'100vh - 119px');
-  width: calc(~'100vw - 128px');
+  width: calc(~'100vw - 80px');
   position: fixed;
   top: 49px;
-  left: 48px;
-  right: 20px;
+  left: 0px;
   max-width: 100% !important;
   margin: 35px;
   outline: 35px solid rgba(0, 0, 0, 0.2);
