Cancel history listener

--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -99,6 +99,9 @@
     padding-top: 102px!important;
 }
 
+.sidebar-list{
+    margin-bottom: 2px;
+}
 
 discover-app-w .sidebar-container {
     background-color: transparent!important;
