Hide globalFilterGroup button

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1467,7 +1467,11 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
   padding: 0 3px;
 }
 
-  /* Change custom discover size */
+.wz-discover.hide-filter-controll .globalFilterGroup__branch {
+  display: none;
+}
+
+/* Change custom discover size */
 .wz-discover > .globalQueryBar > 
 .kbnQueryBar--withDatePicker > 
 .euiFlexItem.euiFlexItem--flexGrowZero >
