--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1577,3 +1577,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
     display: none;
   }
 }
+
+.badge-group-truncate {
+  margin: 5px !important;
+}
