new stat component

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1581,3 +1581,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
 .badge-group-truncate {
   margin: 5px !important;
 }
+
+.no-focus:focus {
+  background-color: transparent !important;
+}
