Truncate groups in welcome-agent. (#2346)
* added truncate component to welcome-agent in stats

* new stat component

* change style component

* fix overlaping events

* added truncte in agent select table

* change imports file

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1577,3 +1577,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
     display: none;
   }
 }
+
+.no-focus:focus {
+  background-color: transparent !important;
+}
