--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1577,3 +1577,48 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
     display: none;
   }
 }
+
+
+.ace_scrollbar-v {
+  margin-top: -10px!important;
+}
+.ace_autocomplete {
+  width: 390px!important;
+}
+
+.wz-devtools {
+  border: 1px solid red;
+  margin: 16px;
+}
+.wz-devtools-tab .euiButtonEmpty__text {
+  height:24px;
+  text-decoration: none !important;
+}
+
+
+.history-list {
+  background-color: white;
+  border:  1px solid #80808061;
+  max-height: 25vh;
+  overflow: auto;
+  border-radius: 5px;
+}
+
+.history-list-item {
+  padding: 10px;
+  font-size: 14px;
+  border-bottom: 1px solid #80808061 ;
+}
+
+.history-list-item:hover {
+  background-color:#a4a0e11a;
+}
+
+.history-list-item-active {
+  background-color:#a09dd326 !important;
+}
+
+.history-list-item:last-child {
+  padding: 10px;
+  border:none;
+}
