Fix styling when mouse is over inventory elements

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -225,19 +225,9 @@ html{
   width: 100%;
 }
 
-
-
-@media (min-width: 1400px) {
-  .wz-mitre-width {
-    width: 80%;
-  }
+.wz-mitre-width { 
+  width: calc(~'100% - 35px');
 }
-@media (max-width: 1399px) {
-  .wz-mitre-width {
-    width: 65%;
-  }
-}
-
 
 .wz-width-auto {
   width: auto;
