stat redirect in overview stat

--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -38,3 +38,7 @@
 .statWithLink:hover .euiTitle {
     text-decoration: underline;
 }
+
+span.statWithLink:hover  {
+    text-decoration: underline;
+}
