--- a/public/templates/management/monitoring/monitoring.html
+++ b/public/templates/management/monitoring/monitoring.html
@@ -12,7 +12,7 @@
         </div>
 
         <!-- Discover search bar section -->
-        <kbn-dis ng-show="!loading && (!showNodes || currentNode)"></kbn-dis>
+        <kbn-dis class='hide-filter-control' ng-show="!loading && (!showNodes || currentNode)"></kbn-dis>
         <!-- End Discover search bar section -->
 
         <!-- Loading status section -->
