--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -14,7 +14,7 @@
 
             <div ng-class="{'no-opacity': !moduleDiscoverReady}">
                 <!-- Discover search bar section -->
-                <kbn-dis ng-show="octrl.tab && octrl.tab !== 'welcome'"></kbn-dis>
+                <kbn-dis class='hide-filter-control' ng-show="octrl.tab && octrl.tab !== 'welcome'"></kbn-dis>
                 <!-- End Discover search bar section -->
             </div>
             
