--- a/public/less/common.less
+++ b/public/less/common.less
@@ -495,14 +495,23 @@ md-sidenav {
   color: #b4bcc2;
 }
 
+.conApp .euiProgress{
+  z-index: 2000;
+}
+
 .wz-dev-column-separator {
-  width: 12px;
-  margin-top: 15px;
-  background: #dddddd;
+  width: 14px;
+  text-align: center;
+  background: #fafbfd;
   float: left;
   cursor: ew-resize;
-  text-align: center;
-  display: block !important;
+  display: table!important;
+  height: 100%;
+}
+
+.wz-dev-column-separator span{
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .wz-dev-column-separator:hover {
@@ -1467,7 +1476,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
   padding: 0 3px;
 }
 
-.wz-discover.hide-filter-controll .globalFilterGroup__branch {
+.wz-discover.hide-filter-control .globalFilterGroup__branch, kbn-dis.hide-filter-control .globalFilterGroup__branch {
   display: none;
 }
 
