work in module guides: adding support to preload guides with configuraiton, added apply changes, restart and view configuration buttons in fixed component at bottom, add centralized as guide type, enabled access to guides in wz menu and management welcome

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1577,3 +1577,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
     display: none;
   }
 }
+
+.euiGlobalToastListWzModuleGuides:first-child{
+  margin-bottom: 40px;
+}
