--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1467,7 +1467,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
   padding: 0 3px;
 }
 
-.wz-discover.hide-filter-controll .globalFilterGroup__branch {
+.wz-discover.hide-filter-control .globalFilterGroup__branch, kbn-dis.hide-filter-control .globalFilterGroup__branch {
   display: none;
 }
 
